[gd_scene load_steps=14 format=3 uid="uid://dvsbqsj5wv1wy"]

[ext_resource type="Script" path="res://Scenes/Desktop/file_explorer.gd" id="1_1v8kj"]
[ext_resource type="Texture2D" uid="uid://dgxk25tcoxnvk" path="res://Assets/Sprites/window.png" id="2_w4xal"]
[ext_resource type="Texture2D" uid="uid://erklue36cvge" path="res://Assets/Sprites/folder.png" id="3_40bqd"]
[ext_resource type="Theme" uid="uid://btb0t5a2pv8m5" path="res://Assets/Themes/PixelText.tres" id="4_wl3kv"]
[ext_resource type="Texture2D" uid="uid://dggqkp4meaihj" path="res://Assets/Sprites/UI/Buttons/xbutton_normal.png" id="5_wshkg"]
[ext_resource type="Texture2D" uid="uid://b10ugupa7uw7k" path="res://Assets/Sprites/UI/Buttons/xbutton_click.png" id="6_dkebc"]
[ext_resource type="Texture2D" uid="uid://buu21chkc3xjq" path="res://Assets/Sprites/UI/Buttons/xbutton_hover.png" id="7_76q47"]
[ext_resource type="FontFile" uid="uid://dhdsgaqa4nsy4" path="res://Assets/Fonts/nihonium113.regular.ttf" id="8_esgpv"]
[ext_resource type="Script" path="res://Scenes/Desktop/file_tree.gd" id="9_cd5ox"]
[ext_resource type="Script" path="res://Scenes/Desktop/breadcrumbs.gd" id="10_05b1x"]

[sub_resource type="Theme" id="Theme_mvvjp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_turwc"]

[sub_resource type="Theme" id="Theme_eyu3w"]
default_font = ExtResource("8_esgpv")
default_font_size = 16
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
Label/constants/shadow_outline_size = 1
Label/styles/normal = SubResource("StyleBoxEmpty_turwc")

[node name="FileExplorer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1v8kj")

[node name="MainWindow" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.5
offset_top = -249.5
offset_right = 348.5
offset_bottom = 249.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_mvvjp")
texture = ExtResource("2_w4xal")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="MainWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MainWindow/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleBar" type="HBoxContainer" parent="MainWindow/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainWindow/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="MainWindow/MarginContainer/VBoxContainer/TitleBar/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_40bqd")
stretch_mode = 5

[node name="Label" type="Label" parent="MainWindow/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
theme = ExtResource("4_wl3kv")
text = "FILES"

[node name="Spacer" type="Control" parent="MainWindow/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer2" type="MarginContainer" parent="MainWindow/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MainWindow/MarginContainer/VBoxContainer/TitleBar/MarginContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_wshkg")
texture_pressed = ExtResource("6_dkebc")
texture_hover = ExtResource("7_76q47")

[node name="HSplitContainer" type="HSplitContainer" parent="MainWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 150

[node name="FileTree" type="Tree" parent="MainWindow/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_eyu3w")
script = ExtResource("9_cd5ox")

[node name="VBoxContainer" type="VBoxContainer" parent="MainWindow/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="BreadcrumbBar" type="HBoxContainer" parent="MainWindow/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_wl3kv")
alignment = 1
script = ExtResource("10_05b1x")

[node name="Button" type="Button" parent="MainWindow/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/BreadcrumbBar"]
layout_mode = 2
text = "skibidi"

[node name="IconInput" type="Control" parent="MainWindow/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
